--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  align-items: center;  
+  
   margin: 24px;
 }
 
@@ -29,7 +29,7 @@
   display: block;
 	width: 1px;
   height: 67px;
-  margin: 0 8px 0 8px;
+  margin: 0 24px 0 24px;
 	background-color: lightgray;
 }
 
@@ -40,14 +40,14 @@
   justify-content: flex-end;
 }
 .header_menu_item {
-  margin-right: 16px;
+  margin-right: 24px;
   display: flex;
   align-items: center;  
 }
 .header_menu_icon {
   height: 16px;
   width: 16px;
-  margin-left: 4px;
+  margin-left: 8px;
 }
 
 .main-menu {
@@ -76,4 +76,11 @@
 .product {
   margin-top: 8px;  
   font-style: italic;
+}
+
+Row {
+  margin: 16px;
+}
+Col {
+  margin: 8px;
 }
